discussion/kv_engine/178716/178716_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

Modernize parse_config [1/2]

Use a std::string view for the input string and make
it callback based instead.

Change-Id: I74f34fb4bf9959029589c199c1b1444a97df2a89

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-11 08:19:17.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-11 08:56:58.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19378/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:95:12: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
           config_item items[],
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19378/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48265/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/utilities/config_parser.cc(93): error C3861: "strcasecmp": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48265/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20562/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/161]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2322 Test failed: `" (Expected `339149" to be less than or equal to `327680" - Unexpected fileSize for vbucket)
[2022-08-11T08:33:11.807Z] (343 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20562/ )

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/persistent_magma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/persistent_magma_value_only
[2022-08-11T08:32:44.438Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:711: Failure
[2022-08-11T08:32:44.438Z] Expected equality of these values:
[2022-08-11T08:32:44.438Z]   initialNonIoTasks
[2022-08-11T08:32:44.438Z]     Which is: 1
[2022-08-11T08:32:44.438Z]   lpNonioQ.getFutureQueueSize()
[2022-08-11T08:32:44.438Z]     Which is: 2
[2022-08-11T08:32:44.438Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (434 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/persistent_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20562/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18590/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40545/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21665/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22388/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9068/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21314/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9165/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29692/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
